tests/__snapshots__/api-toBeConstructableWith-ts-expect-error-stderr.snap.txt
Error: Expression is constructable with the given argument.

  22 |   expect(getPersonConstructor(false)).type.toBeConstructableWith("abc");
  23 |   // @ts-expect-error!
  24 |   expect(getPersonConstructor(false)).type.not.toBeConstructableWith("abc"); // fail
     |                                                ~~~~~~~~~~~~~~~~~~~~~
  25 | 
  26 |   // @ts-expect-error!
  27 |   new (getPersonConstructor(false))();

       at ./__typetests__/toBeCallableWith.tst.ts:24:48 ❭ handles '// @ts-expect-error' directive

Error: Expression is constructable without arguments.

  29 |   expect(getPersonConstructor(false)).type.toBeConstructableWith();
  30 |   // @ts-expect-error!
  31 |   expect(getPersonConstructor(false)).type.not.toBeConstructableWith(); // fail
     |                                                ~~~~~~~~~~~~~~~~~~~~~
  32 | });
  33 | 

       at ./__typetests__/toBeCallableWith.tst.ts:31:48 ❭ handles '// @ts-expect-error' directive

